--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">CalculaMediaUnipNovo</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_lista_materia">ListaMateriaActivity</string>
+    <string name="title_activity_semestre">SemestreActivity</string>
 </resources>
