--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <string name="action_settings">Settings</string>
     <string name="title_activity_lista_materia">ListaMateriaActivity</string>
     <string name="title_activity_semestre">SemestreActivity</string>
+    <string name="title_activity_formulario">FormularioActivity</string>
+    <string name="title_activity_formulario_semestre">FormularioSemestreActivity</string>
 </resources>
